Update stats section with triangle dot pattern and reduce footer size

--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
                 <div class="row g-0 align-items-center">
                     <div class="col-md-5">
                         <div class="service-img p-4 wow fadeInRight" data-wow-delay="0.2s">
-                            <div style="width: 100%; max-width: 420px; aspect-ratio: 1; background-color: #e8e8e8; border-radius: 50%; display: flex; align-items: center; justify-content: center; border: 2px dashed #999; margin: 0 auto;">
-                                <p style="color: #666; font-size: 18px;">Image Placeholder</p>
+                            <div style="width: 450px; height: 450px; overflow: hidden; background: #d6d6d2; border-radius: 60% 0% 0% 60%; display: flex; align-items: center; justify-content: center; margin: 0 auto;">
+                                <p style="color: #666; font-size: 16px;">Image Placeholder</p>
                             </div>
                         </div>
                     </div>
@@ -172,8 +172,8 @@
                 <div class="row g-0 align-items-center">
                     <div class="col-md-5 order-md-1 text-md-end">
                         <div class="service-img p-4 wow fadeInLeft" data-wow-delay="0.2s">
-                            <div style="width: 100%; max-width: 420px; aspect-ratio: 1; background-color: #e8e8e8; border-radius: 50%; display: flex; align-items: center; justify-content: center; border: 2px dashed #999; margin: 0 auto;">
-                                <p style="color: #666; font-size: 18px;">Image Placeholder</p>
+                            <div style="width: 450px; height: 450px; overflow: hidden; background: #d6d6d2; border-radius: 0% 60% 60% 0%; display: flex; align-items: center; justify-content: center; margin: 0 auto;">
+                                <p style="color: #666; font-size: 16px;">Image Placeholder</p>
                             </div>
                         </div>
                     </div>
@@ -198,8 +198,8 @@
                 <div class="row g-0 align-items-center">
                     <div class="col-md-5">
                         <div class="service-img p-4 wow fadeInRight" data-wow-delay="0.2s">
-                            <div style="width: 100%; max-width: 420px; aspect-ratio: 1; background-color: #e8e8e8; border-radius: 50%; display: flex; align-items: center; justify-content: center; border: 2px dashed #999; margin: 0 auto;">
-                                <p style="color: #666; font-size: 18px;">Image Placeholder</p>
+                            <div style="width: 450px; height: 450px; overflow: hidden; background: #d6d6d2; border-radius: 60% 0% 0% 60%; display: flex; align-items: center; justify-content: center; margin: 0 auto;">
+                                <p style="color: #666; font-size: 16px;">Image Placeholder</p>
                             </div>
                         </div>
                     </div>
@@ -226,12 +226,15 @@
 
 
     <!-- Combined Section Start -->
-    <div id="about" class="container-fluid py-5" style="background-color: #ffcc00;">
-        <div class="container py-5">
+    <div id="about" class="container-fluid py-5" style="background-color: #ffffff; position: relative; overflow: hidden;">
+        <!-- Halftone Dots Behind Stats (Triangle/Corner Pattern) -->
+        <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: radial-gradient(circle, #000000 2px, transparent 2px); background-size: 20px 20px; pointer-events: none; z-index: 0; mask-image: linear-gradient(to right, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0.5) 30%, transparent 50%), linear-gradient(to top, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0.5) 30%, transparent 50%); -webkit-mask-image: linear-gradient(to right, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0.5) 30%, transparent 50%), linear-gradient(to top, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0.5) 30%, transparent 50%); mask-composite: intersect; -webkit-mask-composite: source-in;"></div>
+        
+        <div class="container py-5" style="position: relative; z-index: 1;">
             <!-- Main Title with Gradient Border -->
             <div class="text-center mb-5">
                 <div class="wow fadeInUp" data-wow-delay="0.1s">
-                    <h1 style="font-size: 3.5rem; font-weight: 800; color: #000000; text-transform: uppercase; letter-spacing: 2px; padding-bottom: 20px; border-bottom: 5px solid #000000; display: inline-block; margin-bottom: 40px;">
+                    <h1 style="font-size: 2.5rem; font-weight: 800; color: #000000; text-transform: uppercase; letter-spacing: 2px; padding-bottom: 15px; border-bottom: 4px solid #000000; display: inline-block; margin-bottom: 30px;">
                         LEARN AI | BUILD SMART | GET HIRED
                     </h1>
                 </div>
@@ -240,32 +243,32 @@
             <!-- Stats Counter Section -->
             <div class="row g-4 mb-5">
                 <div class="col-md-4 wow fadeInUp" data-wow-delay="0.2s">
-                    <div style="background-color: #000000; padding: 40px; border-radius: 20px; text-align: center; box-shadow: 0 5px 20px rgba(0,0,0,0.1);">
-                        <h2 style="font-size: 4rem; font-weight: 800; margin: 0; color: #ffffff;">2000+</h2>
-                        <p style="font-size: 1.2rem; margin: 10px 0 0 0; text-transform: uppercase; letter-spacing: 1px; color: #ffffff;">Students Benefited</p>
+                    <div style="background-color: #ffcc00; padding: 30px; border-radius: 15px; text-align: center; box-shadow: 0 5px 20px rgba(0,0,0,0.1); border: 3px solid #000000;">
+                        <h2 style="font-size: 3rem; font-weight: 800; margin: 0; color: #000000;">2000+</h2>
+                        <p style="font-size: 1rem; margin: 10px 0 0 0; text-transform: uppercase; letter-spacing: 1px; color: #000000;">Students Benefited</p>
                     </div>
                 </div>
                 <div class="col-md-4 wow fadeInUp" data-wow-delay="0.3s">
-                    <div style="background-color: #000000; padding: 40px; border-radius: 20px; text-align: center; box-shadow: 0 5px 20px rgba(0,0,0,0.1);">
-                        <h2 style="font-size: 4rem; font-weight: 800; margin: 0; color: #ffffff;">3</h2>
-                        <p style="font-size: 1.2rem; margin: 10px 0 0 0; text-transform: uppercase; letter-spacing: 1px; color: #ffffff;">Flagship Programs</p>
+                    <div style="background-color: #ffcc00; padding: 30px; border-radius: 15px; text-align: center; box-shadow: 0 5px 20px rgba(0,0,0,0.1); border: 3px solid #000000;">
+                        <h2 style="font-size: 3rem; font-weight: 800; margin: 0; color: #000000;">3</h2>
+                        <p style="font-size: 1rem; margin: 10px 0 0 0; text-transform: uppercase; letter-spacing: 1px; color: #000000;">Flagship Programs</p>
                     </div>
                 </div>
                 <div class="col-md-4 wow fadeInUp" data-wow-delay="0.4s">
-                    <div style="background-color: #000000; padding: 40px; border-radius: 20px; text-align: center; box-shadow: 0 5px 20px rgba(0,0,0,0.1);">
-                        <h2 style="font-size: 4rem; font-weight: 800; margin: 0; color: #ffffff;">100%</h2>
-                        <p style="font-size: 1.2rem; margin: 10px 0 0 0; text-transform: uppercase; letter-spacing: 1px; color: #ffffff;">Placement Support</p>
+                    <div style="background-color: #ffcc00; padding: 30px; border-radius: 15px; text-align: center; box-shadow: 0 5px 20px rgba(0,0,0,0.1); border: 3px solid #000000;">
+                        <h2 style="font-size: 3rem; font-weight: 800; margin: 0; color: #000000;">100%</h2>
+                        <p style="font-size: 1rem; margin: 10px 0 0 0; text-transform: uppercase; letter-spacing: 1px; color: #000000;">Placement Support</p>
                     </div>
                 </div>
             </div>
 
             <!-- Content Section -->
             <div class="text-center">
-                <div style="background-color: #f8f9fa; padding: 50px; border-radius: 20px; margin: 0 auto; max-width: 1100px; border: 3px solid #000000;" class="wow fadeInUp" data-wow-delay="0.5s">
-                    <p style="font-size: 1.3rem; line-height: 1.8; margin-bottom: 30px; color: #000000 !important;">
+                <div style="background-color: #ffcc00; padding: 35px; border-radius: 15px; margin: 0 auto; max-width: 900px; border: 3px solid #000000;" class="wow fadeInUp" data-wow-delay="0.5s">
+                    <p style="font-size: 1.1rem; line-height: 1.7; margin-bottom: 20px; color: #000000 !important;">
                         Yes - even before your 4 years of college are over, you will earn a certification from <strong style="color: #000000 !important;">Western State University</strong>, giving you a global edge while you are still a student. You get hands-on mentor support at every step - from projects to problem-solving to placements.
                     </p>
-                    <h3 style="font-size: 2.5rem; font-weight: 700; margin: 30px 0; color: #000000 !important; text-transform: uppercase; letter-spacing: 2px;">
+                    <h3 style="font-size: 2rem; font-weight: 700; margin: 20px 0; color: #000000 !important; text-transform: uppercase; letter-spacing: 2px;">
                         YOUR AI JOURNEY STARTS HERE
                     </h3>
                     <p style="font-size: 1.5rem; font-weight: 600; margin: 0; font-style: italic; color: #000000 !important;">
@@ -324,20 +327,17 @@
     <!-- Enrollment Modal End -->
 
     <!-- Footer Start -->
-    <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay="0.1s" style="background-color: #ffcc00; box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);">
-        <div class="container text-center py-5">
+    <div class="container-fluid footer py-3 wow fadeIn" data-wow-delay="0.1s" style="background-color: #ffcc00; box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);">
+        <div class="container text-center py-3">
             <a href="index.html">
-                <h1 class="display-4 mb-3 text-dark text-uppercase">SNS Institutions</h1>
+                <h1 class="mb-2 text-dark text-uppercase" style="font-size: 2rem; font-weight: 700;">SNS Institutions</h1>
             </a>
-            <div class="d-flex justify-content-center mb-4">
-                <a class="btn btn-lg-square btn-outline-primary border-2 m-1" href="https://www.instagram.com/snsinstitutions?igsh=MW9idXFoaDE1OTRsZQ==" target="_blank"><i
-                        class="fab fa-instagram"></i></a>
-                <a class="btn btn-lg-square btn-outline-primary border-2 m-1" href="https://youtube.com/@snsinstitutions?si=vO9yy-WEdR2KZ-lY" target="_blank"><i
-                        class="fab fa-youtube"></i></a>
-                <a class="btn btn-lg-square btn-outline-primary border-2 m-1" href="https://www.linkedin.com/school/snsinstitutions/" target="_blank"><i
-                        class="fab fa-linkedin-in"></i></a>
+            <div class="d-flex justify-content-center mb-3">
+                <a class="btn btn-sm btn-outline-primary border-2 mx-1" href="https://www.instagram.com/snsinstitutions?igsh=MW9idXFoaDE1OTRsZQ==" target="_blank" style="width: 36px; height: 36px; display: flex; align-items: center; justify-content: center;"><i class="fab fa-instagram"></i></a>
+                <a class="btn btn-sm btn-outline-primary border-2 mx-1" href="https://youtube.com/@snsinstitutions?si=vO9yy-WEdR2KZ-lY" target="_blank" style="width: 36px; height: 36px; display: flex; align-items: center; justify-content: center;"><i class="fab fa-youtube"></i></a>
+                <a class="btn btn-sm btn-outline-primary border-2 mx-1" href="https://www.linkedin.com/school/snsinstitutions/" target="_blank" style="width: 36px; height: 36px; display: flex; align-items: center; justify-content: center;"><i class="fab fa-linkedin-in"></i></a>
             </div>
-            <p>&copy; <a class="border-bottom" href="#">SNS Institutions</a>, All Right Reserved.</p>
+            <p style="font-size: 0.9rem; margin: 0;">&copy; <a class="border-bottom" href="#">SNS Institutions</a>, All Right Reserved.</p>
 
         </div>
     </div>
