Update favicon to logo and add black hover effect to Enroll button

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta content="SNS Institutions partners with Analytics Vidhya to offer industry-powered AI & ML education programs" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="img/logo.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -33,6 +33,14 @@
     
     <!-- Custom Color Overrides -->
     <link href="css/custom-overrides.css" rel="stylesheet">
+    
+    <style>
+        .btn-outline-primary:hover {
+            background-color: #000000 !important;
+            border-color: #000000 !important;
+            color: #ffffff !important;
+        }
+    </style>
 </head>
 
 <body style="background-color: #C7C6C3;">
