Updated image placeholders and fixed Western State University text
- Replaced all flagship program placeholders with actual images:
  * AI & ML BLACKBELT PLUS: istockphoto-1628291798-612x612.jpg
  * GenAI PINNACLE PLUS: blackbelt.jpg
  * AGENTIC AI PIONEER: blog-post-AI-vs-ML-1024X1024.jpg
- Added images for After +2 and No more boring sections
- Fixed Western State University text wrapping with white-space: nowrap
- Improved image styling with proper object-fit and shadows
- Added new image assets to repository

--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
                         <!-- Halftone Dots Behind Placeholder (Bottom & Right Only) -->
                         <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 120%; height: 120%; background: radial-gradient(circle, #000000 2px, transparent 2px); background-size: 20px 20px; pointer-events: none; z-index: 0; mask-image: linear-gradient(135deg, transparent 0%, transparent 40%, rgba(0,0,0,0.5) 60%, rgba(0,0,0,0.6) 75%, rgba(0,0,0,0.3) 90%, transparent 100%); -webkit-mask-image: linear-gradient(135deg, transparent 0%, transparent 40%, rgba(0,0,0,0.5) 60%, rgba(0,0,0,0.6) 75%, rgba(0,0,0,0.3) 90%, transparent 100%); animation: dotFloatSimple 8s ease-in-out infinite;"></div>
                         
-                        <div style="width: 100%; height: 400px; background-color: #e8e8e8; border-radius: 10px; display: flex; align-items: center; justify-content: center; border: 2px dashed #999; position: relative; z-index: 1;">
-                            <p style="color: #666; font-size: 18px;">Image Placeholder</p>
+                        <div style="width: 100%; height: 400px; border-radius: 10px; overflow: hidden; position: relative; z-index: 1; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
+                            <img src="img/20260122_115611.jpg.jpeg" alt="AI Career Ready" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
                         </div>
                     </div>
                 </div>
@@ -146,8 +146,8 @@
                         <!-- Halftone Dots Behind Placeholder (Bottom & Left Only) -->
                         <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 120%; height: 120%; background: radial-gradient(circle, #000000 2px, transparent 2px); background-size: 20px 20px; pointer-events: none; z-index: 0; mask-image: linear-gradient(225deg, transparent 0%, transparent 40%, rgba(0,0,0,0.5) 60%, rgba(0,0,0,0.6) 75%, rgba(0,0,0,0.3) 90%, transparent 100%); -webkit-mask-image: linear-gradient(225deg, transparent 0%, transparent 40%, rgba(0,0,0,0.5) 60%, rgba(0,0,0,0.6) 75%, rgba(0,0,0,0.3) 90%, transparent 100%); animation: dotFloatSimple 8s ease-in-out infinite;"></div>
                         
-                        <div style="width: 100%; height: 400px; background-color: #e8e8e8; border-radius: 10px; display: flex; align-items: center; justify-content: center; border: 2px dashed #999; position: relative; z-index: 1;">
-                            <p style="color: #666; font-size: 18px;">Image Placeholder</p>
+                        <div style="width: 100%; height: 400px; border-radius: 10px; overflow: hidden; position: relative; z-index: 1; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
+                            <img src="img/20250828_151655.jpg.jpeg" alt="Real Skills Learning" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
                         </div>
                     </div>
                 </div>
@@ -185,8 +185,8 @@
                 <div class="row g-0 align-items-center">
                     <div class="col-md-5">
                         <div class="service-img p-4 wow fadeInRight" data-wow-delay="0.2s">
-                            <div style="width: 450px; height: 450px; overflow: hidden; background: #d6d6d2; border-radius: 60% 0% 0% 60%; display: flex; align-items: center; justify-content: center; margin: 0 auto;">
-                                <p style="color: #666; font-size: 16px;">Image Placeholder</p>
+                            <div style="width: 450px; height: 450px; overflow: hidden; border-radius: 60% 0% 0% 60%; margin: 0 auto; box-shadow: 0 8px 25px rgba(0,0,0,0.15);">
+                                <img src="img/istockphoto-1628291798-612x612.jpg" alt="AI & ML Training" style="width: 100%; height: 100%; object-fit: cover;">
                             </div>
                         </div>
                     </div>
@@ -211,8 +211,8 @@
                 <div class="row g-0 align-items-center">
                     <div class="col-md-5 order-md-1 text-md-end">
                         <div class="service-img p-4 wow fadeInLeft" data-wow-delay="0.2s">
-                            <div style="width: 450px; height: 450px; overflow: hidden; background: #d6d6d2; border-radius: 0% 60% 60% 0%; display: flex; align-items: center; justify-content: center; margin: 0 auto;">
-                                <p style="color: #666; font-size: 16px;">Image Placeholder</p>
+                            <div style="width: 450px; height: 450px; overflow: hidden; border-radius: 0% 60% 60% 0%; margin: 0 auto; box-shadow: 0 8px 25px rgba(0,0,0,0.15);">
+                                <img src="img/blackbelt.jpg" alt="GenAI Learning" style="width: 100%; height: 100%; object-fit: cover;">
                             </div>
                         </div>
                     </div>
@@ -237,8 +237,8 @@
                 <div class="row g-0 align-items-center">
                     <div class="col-md-5">
                         <div class="service-img p-4 wow fadeInRight" data-wow-delay="0.2s">
-                            <div style="width: 450px; height: 450px; overflow: hidden; background: #d6d6d2; border-radius: 60% 0% 0% 60%; display: flex; align-items: center; justify-content: center; margin: 0 auto;">
-                                <p style="color: #666; font-size: 16px;">Image Placeholder</p>
+                            <div style="width: 450px; height: 450px; overflow: hidden; border-radius: 60% 0% 0% 60%; margin: 0 auto; box-shadow: 0 8px 25px rgba(0,0,0,0.15);">
+                                <img src="img/blog-post-AI-vs-ML-1024X1024.jpg" alt="Agentic AI Training" style="width: 100%; height: 100%; object-fit: cover;">
                             </div>
                         </div>
                     </div>
@@ -302,7 +302,7 @@
             <div class="text-center">
                 <div style="background-color: #ffcc00; padding: 35px; border-radius: 15px; margin: 0 auto; max-width: 900px; box-shadow: 0 5px 20px rgba(0,0,0,0.1);" class="wow fadeInUp" data-wow-delay="0.5s">
                     <p style="font-size: 1.1rem; line-height: 1.7; margin-bottom: 20px; color: #000000 !important;">
-                        Yes - even before your 4 years of college are over, you will earn a certification from <strong style="color: #000000 !important;">Western State University</strong>, giving you a global edge while you are still a student. You get hands-on mentor support at every step - from projects to problem-solving to placements.
+                        Yes - even before your 4 years of college are over, you will earn a certification from <strong style="color: #000000 !important; white-space: nowrap;">Western State University</strong>, giving you a global edge while you are still a student. You get hands-on mentor support at every step - from projects to problem-solving to placements.
                     </p>
                     <h3 style="font-size: 2rem; font-weight: 700; margin: 20px 0; color: #000000 !important; text-transform: uppercase; letter-spacing: 2px;">
                         YOUR AI JOURNEY STARTS HERE
