Update roadmap to use road.gif

--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                 <h2 class="wow fadeInUp" data-wow-delay="0.1s" style="font-size: 2.5rem; font-weight: 800; color: #000000; text-transform: uppercase; letter-spacing: 2px;">Personalized Roadmap</h2>
             </div>
             <div class="wow fadeInUp" data-wow-delay="0.2s" style="overflow: hidden;">
-                <img src="img/roadmap animation .gif" alt="Personalized Roadmap" style="width: 100%; height: auto; display: block; object-fit: cover; border-radius: 15px; box-shadow: 0 8px 25px rgba(0,0,0,0.15);">
+                <img src="img/road.gif" alt="Personalized Roadmap" style="width: 100%; height: auto; display: block; object-fit: cover; border-radius: 15px; box-shadow: 0 8px 25px rgba(0,0,0,0.15);">
             </div>
         </div>
     </div>
